package Modelo;

public class Tamaño {

    private int ancho;
    private int largo;

    public Tamaño(int ancho, int largo) {
        this.ancho=ancho;
        this.largo = largo;
    }

    public int getAncho() {
        return ancho;
    }

    public int getLargo() {
        return largo;
    }

}
